--- a/style.css
+++ b/style.css
@@ -136,14 +136,14 @@ img {
 }
 
 .section-c h2 {
-	font-size: 3rem;
+	font-size: 2.75rem;
 	font-weight: bold;
 	color: var(--pink)
 }
 
 .section-c h4 {
 	padding: 10px 0;
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	font-weight: bold;
 	color: var(--gray)
 }
@@ -161,15 +161,14 @@ img {
 }
 
 .card {
+	margin: auto;
 	height: 500px;
-	box-shadow: -2px 2px 5px black, 2px 2px 5px black, -4px 4px 10px gray, 4px 4px 10px gray;
+	box-shadow: -2px 2px 5px black, 2px 2px 5px black, 2px -2px 5px black, -4px 4px 10px gray, 4px 4px 10px gray, 4px -4px 10px gray;
 }
 
 .card-row {
+	margin: auto;
 	padding: 25px 0;
-	border: 5px solid black;
-	box-shadow: 2px 2px 10px black, 2px -2px 10px black;
-	background-color: var(--blue);
 }
 
 .card h4 {
